<resources>
    <string name="app_name">Driver Awareness Monitoring</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">HELLO</string>
    <string name="calibrate">calibrate</string>
    <string name="remind_to_take_a_break">Remind me to take a break</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="remind_me">after driving for a certain time</string>
    <string name="alert_me_if_falling_asleep">alert_me_if_falling_asleep</string>
    <string name="alert_falling_asleep">Alert me if falling asleep</string>
    <string name="alert_me_if_I_am_distracted">Alert me if I am distracted</string>
    <string name="not_paying_attention_to_the_road">not paying attention to the road</string>
    <string name="alert_on_distraction">alert_me_if_I_am_distracted</string>
    <string name="road_awareness_percentage">Road Awareness Percentage</string>
    <string name="normal_state">NORMAL STATE</string>
    <string name="fatigue_state">FATIGUE STATE</string>
    <string name="monitor_your_driving_style">Monitor Your Driving Style</string>
    <string name="drive_safe_be_safe">Drive Safe, Be Safe</string>
    <string name="statistics"> STATISTICS</string>
    <string name="choose_which_audio_alerts_you_would_like_to_receive">Choose which audio alerts you would like to receive</string>
    <string name="username">Username</string>
    <string name="dash">pie chart</string>
    <string name="all_drives">All Drives</string>
    <string name="drive">Drive </string>
    <string name="choose_a_user">Choose a user:</string>
    <string name="add_a_new_user">Add a new user:</string>
    <string name="add">Add</string>
    <string name="choose_a_user_to_view_data">Choose a user to view data:</string>
    <string name="enter_a_new_user_name">Enter a new user name</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="start_calibration">Starting calibration!</string>
    <string name="look_at_road">Please look at the road for a few seconds!</string>
    <string name="count">five. four. three. two. one.</string>
    <string name="finish">Calibration finished!</string>
    <string name="exit_confiramtion">Are you sure you want to register?</string>
    <string name="title_dialog">ConfirmationDialog</string>
    <string name="exit_app">Are you sure you want to exit?</string>


    <string-array name="pref_remind_me_to_take_a_break">
        <item>never</item>
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>

    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


</resources>