<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/hello"
        android:layout_width="282dp"
        android:layout_height="198dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:fontFamily="sans-serif-black"
        android:letterSpacing="0.06"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_v_middle"
        app:layout_constraintRight_toRightOf="@+id/guideline_v_middle"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_logo"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h_logo"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg"
        android:layout_width="346dp"
        android:layout_height="344dp"
        android:background="@drawable/white_bg"
        android:selectAllOnFocus="true"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_v_middle"
        app:layout_constraintRight_toRightOf="@+id/guideline_v_middle"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_background"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h_background">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/grey_bg"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:selectAllOnFocus="true"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v_middle_b"
            app:layout_constraintRight_toRightOf="@+id/guideline_v_middle_b"
            app:layout_constraintTop_toTopOf="@+id/guideline_h_email"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_h_email"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v_middle_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/grey_bg"
            android:hint="@string/prompt_password"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="10dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v_middle_b"
            app:layout_constraintRight_toRightOf="@+id/guideline_v_middle_b"
            app:layout_constraintTop_toTopOf="@+id/guideline_h_password"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_h_password"/>

        <Button
            android:id="@+id/login"
            android:layout_width="152dp"
            android:layout_height="60dp"
            android:background="@drawable/ac_bg"
            android:enabled="false"
            android:textColor="@color/white"
            app:backgroundTint="#E6E5E5"
            android:text="@string/action_sign_in"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v_middle_b"
            app:layout_constraintRight_toRightOf="@+id/guideline_v_middle_b"
            app:layout_constraintTop_toTopOf="@+id/guideline_h_btn"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_h_btn"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>