<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003cff"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_v_0.5"
        app:layout_constraintRight_toRightOf="@+id/guideline_v_0.5"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h_0.25"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_0.25">
        <ImageView
            android:id="@+id/car"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:src="@drawable/car" />
        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/car"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/monitor_your_driving_style"
            android:textColor="#fff"
            android:textSize="25dp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t1"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/drive_safe_be_safe"
            android:textColor="#fff"
            android:textSize="14dp"
            android:textStyle="italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_v_0.5"
        app:layout_constraintRight_toRightOf="@+id/guideline_v_0.5"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h_0.82"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_0.82">
        <ImageView
            android:id="@+id/camera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/camera" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/camera"
            android:text="    CAMERA"
            android:textColor="#fff"
            android:textSize="10dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_v_0.25"
        app:layout_constraintRight_toRightOf="@+id/guideline_v_0.25"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h_0.82"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_0.82">
        <ImageView
            android:id="@+id/settings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/settings" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_below="@id/settings"
            android:layout_marginTop="5dp"
            android:text="  SETTINGS"
            android:textColor="#fff"
            android:textSize="10dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_v_0.75"
        app:layout_constraintRight_toRightOf="@+id/guideline_v_0.75"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h_0.82"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_0.82">
        <ImageView
            android:id="@+id/statistics"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/statistics" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/statistics"
            android:text="@string/statistics"
            android:textColor="#fff"
            android:textSize="10dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/slider"
        android:layout_width="350dp"
        android:layout_height="82dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_v_0.5"
        app:layout_constraintRight_toRightOf="@+id/guideline_v_0.5"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_0.6"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h_0.6"
        app:area_margin="3dp"
        app:inner_color="#003cff"
        app:outer_color="#FFFFFF"
        app:text="               SWIPE FOR AWARENESS DETECTION"
        app:text_size="13sp"
        app:text_style="bold" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_0.75"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_0.25"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_0.6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_0.82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_0.25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>